--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,12 @@
 	<li>
 		CRUD
 		<ul>
-			
+			<li>
+            	jquery
+            </li>
+            <li>
+               	entender o coffee
+            </li>
 			<li>
 				filtro nas listagens
 			</li>
