Tried jquery on filter, but there is not jquery added on project

--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -44,6 +44,11 @@
 </table>
 
 <br>
+<script javascript>
+    $("#filter[size]").change(function(){
+        console.log('teste');
+    });
+</script>
 
 
 <%= link_to 'New Comic', new_comic_path %>
