--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <%= stylesheet_link_tag "default" %>
 <%= stylesheet_link_tag "scaffold" %>
 <%= stylesheet_link_tag "application" %>
+<%= javascript_include_tag "jquery" %>
 </head>
 <body>
 <h1 id="header">Xavier and Magneto's Reading Room</h1>
